<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Conture" Id="{cfdbc595-4b4c-43c7-bcce-906f0347e129}">
    <Declaration><![CDATA[TYPE ST_Conture :
STRUCT
	fAreaMin : REAL;		(*Mindestfläche der zufindenden LED*)
	fAreaMax : REAL;		(*Mindestfläche der zufindenden LED*)
	fHeightMin : REAL;		(*Mindesthöhe der zufindenden LED*)
	fHeightMax : REAL;		(*Maximalhöhe der zufindenden LED*)
	fWidthMax : REAL;		(*Maximalhöhe der zufindenden LED*)
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>